ingress/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
  - protocol: TCP
    port: 60002
    targetPort: 80
