ingress/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: NodePort
  selector:
    app: httpd
  ports:
  - protocol: TCP
    port: 60001
    targetPort: 80
