ingress/lighttpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lighttpd-service
spec:
  type: NodePort
  selector:
    app: lighttpd
  ports:
  - protocol: TCP
    port: 60002
    targetPort: 80
